green color config

--- a/question/templates/question/ask_modal.html
+++ b/question/templates/question/ask_modal.html
@@ -27,7 +27,7 @@
                             </div>
                            
                             <div class="ModalButtonGroup QuestionAsk-buttonGroup ModalButtonGroup--vertical">
-                                <button class="Button Button--primary Button--blue" type="button" form="form_ask" disabled>提交问题</button>
+                                <button class="Button Button--primary Button--green" type="button" form="form_ask" disabled>提交问题</button>
                             </div>
                         </form>
                     </div>
