--- a/question/templates/question/t_article_mobile.html
+++ b/question/templates/question/t_article_mobile.html
@@ -79,7 +79,7 @@
 <div class="Input Editable">
 <div class="Dropzone RichText ztext" style="min-height: 198px;"><div class="DraftEditor-root"><div class="public-DraftEditorPlaceholder-root"><div class="public-DraftEditorPlaceholder-inner">写下你的评论...</div></div><div class="DraftEditor-editorContainer"><div id="comment_edit" class="notranslate public-DraftEditor-content" contenteditable="true" role="textbox" spellcheck="true" tabindex="0" style="outline: none;white-space: pre-wrap;word-wrap: break-word;"></div></div></div></div>
 <div></div></div></div>
-<button disabled="" type="button" class="Button Button-comment-send  CommentEditor-singleButton Button--primary Button--blue">评论</button>
+<button disabled="" type="button" class="Button Button-comment-send  CommentEditor-singleButton Button--primary Button--green">评论</button>
 </div>
 <div>
 <div class="CommentList">
@@ -90,7 +90,7 @@
 <div class="Input Editable">
 <div class="Dropzone RichText ztext" style="min-height: 198px;"><div class="DraftEditor-root"><div class="public-DraftEditorPlaceholder-root"><div class="public-DraftEditorPlaceholder-inner">写下你的评论...</div></div><div class="DraftEditor-editorContainer"><div id="comment_edit" class="notranslate public-DraftEditor-content" contenteditable="true" role="textbox" spellcheck="true" tabindex="0" style="outline: none;white-space: pre-wrap;word-wrap: break-word;"></div></div></div></div>
 <div></div></div></div>
-<button disabled="" type="button" class="Button Button-comment-send  CommentEditor-singleButton Button--primary Button--blue">评论</button>
+<button disabled="" type="button" class="Button Button-comment-send  CommentEditor-singleButton Button--primary Button--green">评论</button>
 </div>
 </div>
 </div>
