--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -34,9 +34,9 @@
 <div class="RichContent-inner"><span class="RichText CopyrightRichText-richText"></span></div>
 <div class="ContentItem-actions">
 <div class="MobileQuestionButtonGroup">
-<button class="Button FollowButton Button--primary Button--blue is-hide" type="button" data-follow-type="question"></button>
-<button class="ShowAnswerBar-nouse Button Button--blue" type="button">写回答</button>
-<button class="Button Button--blue" type="button" onclick="showInvite()">邀请回答</button>
+<button class="Button FollowButton Button--primary Button--green is-hide" type="button" data-follow-type="question"></button>
+<button class="ShowAnswerBar-nouse Button Button--green" type="button">写回答</button>
+<button class="Button Button--green" type="button" onclick="showInvite()">邀请回答</button>
 </div>
 </div>
 </div>
@@ -70,7 +70,7 @@
 <div class="AnswerForm-footerContent AnswerForm-container">
 <div class="AnswerForm-status"></div>
 <div class="AnswerForm-footerRight">
-<button class="AnswerForm-submit  Button Button--primary Button--blue" type="button" disabled>提交回答</button>
+<button class="AnswerForm-submit  Button Button--primary Button--green" type="button" disabled>提交回答</button>
 </div>
 </div>
 </div>
@@ -141,7 +141,7 @@
 {% endif %}
 <!--
 <div class="Card ViewAllInappCard">
-<button class="Button ViewAllInappButton Button--primary Button--blue" type="button">打开 App，查看全部 439 个回答</button>
+<button class="Button ViewAllInappButton Button--primary Button--green" type="button">打开 App，查看全部 439 个回答</button>
 </div>
 -->
 </div>
