--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -18,7 +18,7 @@
 <div class="Card">
 <div role="navigation">
 <div>
-<button class="Button--primary Button--blue" style="float:right; width:62px; height:32px; line-height:30px; margin-top:7px; margin-right:6px; border:1px solid; border-radius:4px;" data-toggle="modal" data-target="#askModal">提问</button>
+<button class="Button--primary Button--green" style="float:right; width:62px; height:32px; line-height:30px; margin-top:7px; margin-right:6px; border:1px solid; border-radius:4px;" data-toggle="modal" data-target="#askModal">提问</button>
 <div role="search" style="position:absolute; width:auto;left:0px;right:73px;float:none;margin:7px 0 0 10px;">
 <div style="padding-right:30px;width:100%;height:33px;">
 <!--<input type="hidden" name="type" value="content"><label for="q" class="hide-text">知乎搜索</label>-->
