--- a/question/templates/question/t_sign_mobile.html
+++ b/question/templates/question/t_sign_mobile.html
@@ -47,7 +47,7 @@
 <button class="Button SignFlow-switchPassword Button--plain" tabindex="-1" type="button"><svg width="24" height="20" viewBox="0 0 24 24" class="Icon SignFlow-switchPasswordIcon Icon--read" aria-hidden="true" style="vertical-align: middle; height: 20px; width: 24px;"><title></title><g><title>Read</title><path d="M1 11.5C1 15 7 19 12 19s11-4 11-7.5S17 4 12 4 1 8 1 11.5zm11 5c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm-3-5c0 1.66 1.34 3 3 3s3-1.34 3-3-1.34-3-3-3-3 1.34-3 3z" fill-rule="evenodd"></path></g></svg></button>
 </div>
 
-<button class="Button Register-submitButton Button--primary Button--blue" type="submit">注册</button>
+<button class="Button Register-submitButton Button--primary Button--green" type="submit">注册</button>
 </form>
 </div>
 
@@ -73,7 +73,7 @@
 <button class="Button Login-switchType Button--plain" type="button" data-login-type="password"></button>
 <button class="Button Login-cannotLogin Button--plain" type="button">忘记密码？</button>
 </div>
-<button class="Button SignFlow-submitButton Button--primary Button--blue" type="submit">登录</button>
+<button class="Button SignFlow-submitButton Button--primary Button--green" type="submit">登录</button>
 </form>
 </div>
 
