--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -39,7 +39,7 @@
 </div>
 
 <div style="display:flex;justify-content:center;">
-<button class="WritePost Button Button--primary Button--blue" disabled type="button">发表</button>
+<button class="WritePost Button Button--primary Button--green" disabled type="button">发表</button>
 </div>
 
 </form>
