--- a/question/templates/question/t_er_active_mobile.html
+++ b/question/templates/question/t_er_active_mobile.html
@@ -21,8 +21,8 @@
 <div class="Profile-name"></div>
 <div class="RichText Profile-headline"></div>
 <div class="MobileQuestionButtonGroup" style="margin:12px auto;">
-<button class="Button ProfileEditButton Button--primary Button--blue">编辑个人资料</button>
-<button class="Button FollowButton ProfileFollowButton Button--primary Button--blue" type="button" data-follow-type="people"></button>
+<button class="Button ProfileEditButton Button--primary Button--green">编辑个人资料</button>
+<button class="Button FollowButton ProfileFollowButton Button--primary Button--green" type="button" data-follow-type="people"></button>
 <button class="Button ProfileLetterButton Button--grey Button--withIcon Button--withLabel" type="button" data-toggle="modal" data-target="#letterModal"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comments Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M11 2c5.571 0 9 4.335 9 8 0 6-6.475 9.764-11.481 8.022-.315-.07-.379-.124-.78.078-1.455.54-2.413.921-3.525 1.122-.483.087-.916-.25-.588-.581 0 0 .677-.417.842-1.904.064-.351-.14-.879-.454-1.171A8.833 8.833 0 0 1 2 10c0-3.87 3.394-8 9-8zm10.14 9.628c.758.988.86 2.009.86 3.15 0 1.195-.619 3.11-1.368 3.938-.209.23-.354.467-.308.722.12 1.073.614 1.501.614 1.501.237.239-.188.562-.537.5-.803-.146-1.495-.42-2.546-.811-.29-.146-.336-.106-.563-.057-2.043.711-4.398.475-6.083-.927 5.965-.524 8.727-3.03 9.93-8.016z" fill-rule="evenodd"></path></svg></span>发私信</button>
 </div>
 <div class="Profile-infos">
@@ -33,10 +33,6 @@
 <span id="job"></span>
 </div>
 <button class="Profile-infosOia">详细资料 <span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--ArrowRight" fill="#8590a6" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M9.218 16.78a.737.737 0 0 0 1.052 0l4.512-4.249a.758.758 0 0 0 0-1.063L10.27 7.22a.737.737 0 0 0-1.052 0 .759.759 0 0 0-.001 1.063L13 12l-3.782 3.716a.758.758 0 0 0 0 1.063z" fill-rule="evenodd"></path></svg></span></button>
-</div>
-<div class="Profile-badges">
-<div class="Profile-badgeItem">
-<span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--Like" fill="#0f88eb" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.718 10.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.649.718.649h1.45c.916 0 .847-.649.847-.649v-9.554c-.09-.879-.854-.791-.847-.791l-2.446.022zm11.727-.05s.756-1.577 1.156-4.083c.163-2.861-2.052-3.491-3.037-2.362-1.014 1.233 0 2.057-4.45 5.83C7.336 9.966 7 11.011 7 11.998v6.998c-.016 1.104.491 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.911c1.047-3.515-1.95-3.703-1.95-3.703l-5.387.007z" fill-rule="evenodd"></path></svg></span>0 赞同 · 0 感谢</div>
 </div>
 <div class="Profile-follows"><span class="NextPage" data-next-page-type="followers"><span id="followers"></span> 关注<span class="who"></span>的人</span><div class="ProfileHeader-infosDivider"></div><span class="NextPage" data-next-page-type="followtos"><span id="followtos"></span> <span class="who"></span>关注的人</span></div>
 </div>
