--- a/question/templates/question/t_misc_mobile.html
+++ b/question/templates/question/t_misc_mobile.html
@@ -47,7 +47,7 @@
 </div>
 </div>
 </div>
-<button type="submit" class="Button PasswordReset-nextStep Button--primary Button--blue">下一步</button>
+<button type="submit" class="Button PasswordReset-nextStep Button--primary Button--green">下一步</button>
 </form>
 </div>
 </div>
