--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -25,7 +25,7 @@
         {% for topic in context_question.topics.all %}
         <div class="Tag QuestionTopic">
         <span class="Tag-content">
-        <a class="TopicLink TopicPopover" href="/topic/{{topic.id}}/" data-topic-id="{{topic.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{topic.name}}</a>
+        <a class="TopicLink TopicPopover" style="text-decoration:none;" href="/topic/{{topic.id}}/" data-topic-id="{{topic.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{topic.name}}</a>
         </span>
         </div>
         {% endfor %}
@@ -52,7 +52,7 @@
         
         <div class="QuestionButtonGroup">
         <button class="Button FollowButton Button--primary" data-follow-type="question" type="button"></button>
-        <button class="ShowAnswerBar-nouse Button Button--blue" type="button">
+        <button class="ShowAnswerBar-nouse Button Button--green" type="button">
         <svg viewBox="0 0 12 12" class="Icon Button-icon Icon--modify" style="height:16px;width:14px;" width="14" height="16" aria-hidden="true"><title></title><g><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g>
         </svg>写回答</button>
         </div>
@@ -122,7 +122,7 @@
             <div class="AnswerForm-footerContent AnswerForm-container">
             <div class="AnswerForm-status"></div>
             <div class="AnswerForm-footerRight">
-            <button class="AnswerForm-submit  Button Button--primary Button--blue" type="button" disabled>提交回答</button>
+            <button class="AnswerForm-submit  Button Button--primary Button--green" type="button" disabled>提交回答</button>
             </div>
             </div>
             </div>
