--- a/question/templates/question/t_index_mobile.html
+++ b/question/templates/question/t_index_mobile.html
@@ -23,6 +23,9 @@
 </main>
 </div>
 </div>
+<!-- ask（Modal） -->
+{% include 'question/ask_modal_mobile.html' %}
+<!-- ask（Modal） -->
 
 </body>
 </html>
