--- a/question/templates/question/t_answer_mobile.html
+++ b/question/templates/question/t_answer_mobile.html
@@ -41,7 +41,7 @@
 </div>
 
 <!-- ask（Modal） -->
-{% include 'question/ask_modal.html' %}
+{% include 'question/ask_modal_mobile.html' %}
 <!-- ask（Modal） -->
 
 <!-- letter（Modal） -->
