--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -49,7 +49,7 @@
 <!--------------------main end-------------------->
 
 <!-- ask（Modal） -->
-{% include 'question/ask_modal.html' %}
+{% include 'question/ask_modal_mobile.html' %}
 <!-- ask（Modal） -->
 
 <!-- letter（Modal） -->
