--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -9,7 +9,7 @@
 
 
 <!--------------------main---------------------->
-<main role="main" class="App-main"  data-module="question" data-question-detail="{{context_question.detail}}" data-answer-content="{{push_answer.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{context_question.id}}","question_title":"{{context_question.title}}","question_follower_nums":"{{context_question.follower_nums}}","question_answer_nums":"{{context_question.answer_nums}}","question_followed":"{{followed}}","answer_id":"{{push_answer.id}}","answer_like_nums":"{{push_answer.like_nums}}","answer_comment_nums":"{{push_answer.comment_nums}}","author_id":"{{push_answer.author.id}}","author_name":"{{push_answer.author.first_name}}","author_avatar":"{{push_answer.author.userprofile.avatar}}","author_mood":"{{push_answer.author.userprofile.mood}}"}'>
+<main role="main" class="App-main"  data-module="question" data-question-detail="{{context_question.detail}}" data-answer-content="{{push_answer.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{context_question.id}}","question_title":"{{context_question.title}}","question_follower_nums":"{{context_question.follower_nums}}","question_answer_nums":"{{context_question.answer_nums}}","question_click_nums":"{{context_question.click_nums}}","question_followed":"{{followed}}","answer_id":"{{push_answer.id}}","answer_like_nums":"{{push_answer.like_nums}}","answer_comment_nums":"{{push_answer.comment_nums}}","author_id":"{{push_answer.author.id}}","author_name":"{{push_answer.author.first_name}}","author_avatar":"{{push_answer.author.userprofile.avatar}}","author_mood":"{{push_answer.author.userprofile.mood}}"}'>
         
 <div class="QuestionPage">
     <div>
@@ -40,7 +40,7 @@
         <div class="QuestionHeader-side">
         <div class="QuestionHeader-follow-status">
         <div class="QuestionFollowStatus">        
-        <div class="NumberBoard QuestionFollowStatus-counts NumberBoard--divider"><button type="button" class="Button NumberBoard-item Button--plain"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName" >关注者</div><strong class="NumberBoard-value NumberBoard-itemValue" data-update-value-type="question-followed"></strong></div></button></div>      
+        <div class="NumberBoard QuestionFollowStatus-counts NumberBoard--divider"><button type="button" class="Button NumberBoard-item Button--plain"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName" >关注者</div><strong class="NumberBoard-value NumberBoard-itemValue" data-update-value-type="question-followed"></strong></div></button><div class="NumberBoard-item"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName">浏览人数</div><strong class="NumberBoard-value NumberBoard-itemValue"></strong></div></div></div>      
         </div>
         </div>
         </div>
@@ -202,7 +202,43 @@
         <div class="List-headerOptions">
         </div>
         </div>
-        <div id="appendArea"></div>
+        <div id="appendArea">
+        
+        {% if more_answers %}
+        {% for answer in more_answers %}
+        <div class="List-item ScrollIntoMark" id="0.15356782296108706">
+        <div class="ContentItem AnswerItem" data-answer-id="{{answer.id}}" data-comment-nums="{{answer.comment_nums}}">
+        <div class="ContentItem-meta">
+        <div class="AnswerItem-meta AnswerItem-meta--related">
+        <div class="AuthorInfo">
+        <span class="UserLink AuthorInfo-avatarWrapper">
+        <a class="UserLink-link PeoplePopover" href="/er/{{answer.author.id}}" data-author-id="{{answer.author.id}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true"><img class="Avatar AuthorInfo-avatar" width="40" height="40" src="{{answer.author.userprofile.avatar}}" alt="{{answer.author.first_name}}"></a>
+        </span>
+        <div class="AuthorInfo-content"><div class="AuthorInfo-head"><span class="UserLink AuthorInfo-name"><a class="UserLink-link" href="/er/{{answer.author.id}}">{{answer.author.first_name}}</a></span></div><div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText AuthorInfo-badgeText">{{answer.author.userprofile.mood}}</div></div></div>
+        </div>
+        </div>
+        </div>
+        </div>
+        <div class="RichContent RichContent--unescapable is-collapsed">
+        <div class="RichContent-expand">
+        <div class="RichContent-inner" style="max-height:400px"><span class="RichText CopyrightRichText-richText">{{answer.content|safe}}</span></div>
+        <button class="Button ContentItem-more ContentItem-rightButton Button--plain" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+        </div>
+        <div class="ContentItem-actions">
+        <span>
+        <button class="Button-like-nouse Button Button--plain" type="button" data-like-type="answer" data-like-id="2"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>31</button>
+        </span>
+        <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button" data-answer-id="2"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>11 条评论</button>
+        <div class="Popover ShareMenu ContentItem-action"><div class="" aria-haspopup="true" aria-expanded="false"><img class="ShareMenu-fakeQRCode" src="" alt="微信二维码"><button class="Button Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path></svg></span>分享</button></div></div>
+        <button class="Button ContentItem-less ContentItem-rightButton Button--plain is-hide" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+        </div>
+        </div>
+        </div>
+        </div>
+        {% endfor %}
+        {% endif %}
+        
+        </div>
         </div>
         </div>
                 
@@ -230,6 +266,31 @@
         <div class="Question-sideColumn Question-sideColumn--sticky">
         {% if push_answer %}
         <div class="Card AnswerAuthor">
+        <div class="Card-header AnswerAuthor-title">
+        <div class="Card-headerText">关于作者</div>
+        </div>
+        <div class="Card-section">
+        <div class="AnswerAuthor-user">
+        <div class="AnswerAuthor-user-avatar"><span class="UserLink"><a class="UserLink-link" href="/er/{{push_answer.author.id}}"><img class="Avatar Avatar--large UserLink-avatar" width="60" height="60" src="{{push_answer.author.userprofile.avatar}}" alt="{{push_answer.author.first_name}}"></a></span></div>
+        <div class="AnswerAuthor-user-content"><div class="AnswerAuthor-user-name"><span class="UserLink"><a class="UserLink-link" href="/er/{{push_answer.author.id}}">{{push_answer.author.first_name}}</a></span></div><div class="AnswerAuthor-user-headline"><div class="RichText">{{push_answer.userprofile.mood}}</div></div></div>
+        </div>
+        </div>
+        <div class="Card-section">
+        <div class="AnswerAuthor-counts">
+        <div class="NumberBoard">
+        <a class="Button NumberBoard-item Button--plain" type="button" href="/er/{{push_answer.author.id}}/answers"><div class="NumberBoard-name">回答</div><div class="NumberBoard-value">1</div></a>
+        <a class="Button NumberBoard-item Button--plain" type="button" href="/er/{{push_answer.author.id}}/posts"><div class="NumberBoard-name">文章</div><div class="NumberBoard-value">10</div></a>
+        <a class="Button NumberBoard-item Button--plain" type="button" href="/er/{{push_answer.author.id}}/followers">
+        <div class="NumberBoard-name">关注者</div>
+        <div class="NumberBoard-value" data-update-value-type="people-followed">0</div>
+        </a>
+        </div>
+        </div>
+        <div class="MemberButtonGroup AnswerAuthor-buttons">
+        <button class="Button FollowButton Button--primary Button--green" type="button" data-er-id="1" data-follow-type="people" data-followed="false" data-who="she">关注他</button>
+        <button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button>
+        </div>
+        </div>
         </div>
         {% endif %}
         
