--- a/question/templates/question/header.html
+++ b/question/templates/question/header.html
@@ -35,8 +35,8 @@
 
 <div class="AppHeader-profile">
 <div class="Popover AppHeader-menu">
-<button type="button" id="MenuPopover" aria-haspopup="true" aria-expanded="false" class="Button AppHeader-profileEntry Button--plain" data-er-id="{{user.id}}" data-er-avatar="{{user.userprofile.avatar}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<img class="Avatar AppHeader-profileAvatar" width="30" height="30" src="{{user.userprofile.avatar}}">
+<button type="button" id="MenuPopover" aria-haspopup="true" aria-expanded="false" class="Button AppHeader-profileEntry Button--plain" data-er-id="" data-er-avatar="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
+<img class="Avatar AppHeader-profileAvatar is-hide" width="30" height="30" src="">
 </button>
 </div>
 </div>
