--- a/question/templates/question/t_alltopics.html
+++ b/question/templates/question/t_alltopics.html
@@ -7,7 +7,7 @@
 <div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;"></div>
 
 <!--------------------main---------------------->
-<main role="main" class="App-main" data-module="alltopics" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}"}'>
+<main role="main" class="App-main" data-module="alltopics" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}"}'>
 <div class="ContentLayout">
 <div class="ContentLayout-mainColumn">
 <div class="1Card">
