--- a/question/templates/question/t_article.html
+++ b/question/templates/question/t_article.html
@@ -4,7 +4,7 @@
 <body class="">
 {% include 'question/header.html' %}
 <div class="LoadingBar"></div>
-<main role="main" class="App-main" data-module="article" data-article-content="{{article.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","article_id":"{{article.id}}","article_title":"{{article.title}}","article_like_nums":"{{article.like_nums}}","article_comment_nums":"{{article.comment_nums}}","article_pub_date":"{{article_pub_date}}","followed":"{{followed}}","author_id":"{{article.author.id}}","author_name":"{{article.author.first_name}}","author_avatar":"{{article.author.userprofile.avatar}}","author_mood":"{{article.author.userprofile.mood}}","author_sexual":"{{article.author.userprofile.sexual}}"}'>
+<main role="main" class="App-main" data-module="article" data-article-content="{{article.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","article_id":"{{article.id}}","article_title":"{{article.title}}","article_like_nums":"{{article.like_nums}}","article_comment_nums":"{{article.comment_nums}}","article_pub_date":"{{article_pub_date}}","followed":"{{followed}}","author_id":"{{article.author.id}}","author_name":"{{article.author.first_name}}","author_avatar":"{{article.author.userprofile.avatar}}","author_mood":"{{article.author.userprofile.mood}}","author_sexual":"{{article.author.userprofile.sexual}}"}'>
 
 <div class="Post-content">
 <!--<img class="TitleImage" src="" alt="">-->
